# trilha-python-dio

./: dados.json  example.csv
03 - Decoradores, Iteradores e Geradores/: 2-1_funcao_interna.py  2-2_funcao_interna.py  3-1_retorna_funcao.py  5-2_decorador_com_argumentos - args kwargs.py  5-3_decorador_com_argumentos - args kwargs.py  teste - funcoes  04.py  teste01 definicoes.py  teste02 - Dizer Oi - Funcoes e Decoradores.py  teste03 - testandoi funcoes.py  teste05 - funcoes .py  teste06 - calc funcoes.py
04 - Data e hora/: 1_datetime.py  2_timedelta.py  3_strftime_strptime.py  4_pytz.py  5_timezone.py  strftime e strptime.md  teste datetime 01.py
05 - Manipulação de arquivos/: 1-2 operacao_leitura teste1.py  1-3 operacao_leitura teste2.py  1-4 operacao_leitura teste3.py  2-1_operacao_escrita teste1.py  2-2_operacao_escrita teste2.py  3_os_shutil - test1.py  6_1 csv - teste 3.py  6_csv - 1-criando-arq-csv.py  6_csv - 2-lendo-arq-csv.py  Manipulacao Arquivos.md  Teste_Manip-Arq 001.py  csv - Trabalhando com Arquivo csv.md  csv - teste 1-Lendo Arquivo CSV.py  csv - teste 2- Escrevendo Arquivo CSV.py  lorem.txt  metodo read 01.py  texte01.txt  usuarios-2.csv
05 - Manipulação de arquivos/01-AmbienteVirual/: pyproject.toml
05 - Manipulação de arquivos/01-AmbienteVirual/myproject/: pyproject.toml
06 - Gerenciamento de pacotes e boas práticas/: 01_boas_praticas.py  Criando Ambiente Virtual.md  boas praticas python.md  pacotes em python.md  pipenv e poetry.md
07 - Banco de dados/: 02_injecao_sql.py  03_transacao.py  meu_banco.sqlite
(+151 files in other folders)
